fixing layout issue in admin

--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -58,6 +58,11 @@ div span.prj_ind_col { 	font-size: 1.0em; font-weight: bold; color: #5e6469; }
 
 p.prj_ind_legend { font-size: 1.0em; color: #5e6469; }
 
+.inline-errors {
+  font-size: 1em;
+  line-height: 1em;
+}
+
 /*li { border: solid 1px blue !important; }*/
 
 
